<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FAFAFA"
    tools:context=".MainActivity">

    <!-- Fejléc -->
    <TextView
        android:id="@+id/mainActivityText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/drink_store"
        android:textSize="32sp"
        android:textStyle="bold"
        android:textColor="#2C2C2C"
        android:gravity="center"
        android:padding="32dp"
        android:background="@drawable/header_background"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <!-- Bejelentkezés gomb -->
    <Button
        android:id="@+id/SignIn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:onClick="login"
        android:text="@string/sign_in"
        android:textColor="#FFFFFF"
        android:layout_marginTop="48dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintTop_toBottomOf="@id/mainActivityText"
        app:layout_constraintStart_toStartOf="parent"
        android:backgroundTint="#2196F3"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Regisztráció gomb -->
    <Button
        android:id="@+id/Register"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:onClick="register"
        android:text="@string/register"
        android:textColor="#FFFFFF"
        android:layout_marginTop="24dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintTop_toBottomOf="@id/SignIn"
        android:backgroundTint="#2196F3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
