<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FAFAFA"
    tools:context=".UserIndexActivity">

    <!-- Header -->
    <TextView
        android:id="@+id/mainActivityText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/drink_store"
        android:textSize="32sp"
        android:textStyle="bold"
        android:textColor="#2C2C2C"
        android:gravity="center"
        android:padding="24dp"
        android:background="@drawable/header_background"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- RecyclerView Container with Card Background -->
    <androidx.cardview.widget.CardView
        android:id="@+id/cardContainer"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="16dp"
        android:elevation="6dp"
        app:cardCornerRadius="16dp"
        app:layout_constraintTop_toBottomOf="@id/mainActivityText"
        app:layout_constraintBottom_toTopOf="@id/logout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/categoryRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipToPadding="false"
            android:contentDescription="@string/drink_store"
            android:padding="12dp"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            app:spanCount="2" />

    </androidx.cardview.widget.CardView>

    <!-- Logout Button -->
    <Button
        android:id="@+id/logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/logout"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:backgroundTint="#FF5252"
        android:elevation="4dp"
        android:paddingLeft="32dp"
        android:paddingRight="32dp"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/rounded_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:onClick="logout" />

    <Button
        android:id="@+id/cart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:background="@drawable/rounded_button"
        android:backgroundTint="#FF5252"
        android:elevation="4dp"
        android:onClick="cart"
        android:paddingLeft="32dp"
        android:paddingTop="12dp"
        android:paddingRight="32dp"
        android:paddingBottom="12dp"
        android:text="Cart"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.146"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/contact_button"
        android:layout_width="77dp"
        android:layout_height="89dp"
        android:onClick="saveShopContact"
        android:text="@string/save_shop_contact"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="16dp"
        tools:ignore="MissingConstraints" />


</androidx.constraintlayout.widget.ConstraintLayout>
